Updated pixi deps

--- a/pixi.toml
+++ b/pixi.toml
@@ -26,4 +26,5 @@ scikit-learn = "*"
 scipy = "*"
 seaborn = "*"
 tensorflow = "*"
-watermark = "*"
+watermark = ">=2.5.0,<3"
+preliz = ">=0.11.0,<0.12"
